GH-4175: Fix for store details width on tablet

--- a/projects/storefrontstyles/scss/components/store-finder/_store-finder-store-description.scss
+++ b/projects/storefrontstyles/scss/components/store-finder/_store-finder-store-description.scss
@@ -51,10 +51,6 @@
 
   .cx-feature-value {
     color: var(--cx-color-primary);
-
-    @include media-breakpoint-down(md) {
-      margin: 5px 0;
-    }
   }
 
   .cx-feature-item {
